[package]
name = "acs"
version = "0.1.0"
edition = "2021"
authors = ["Jesper Dalberg"]
license = "Unlicense"
description = "An ACS server"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.16"
warp = "^0.3"
jsonwebtoken = { version = "^9", features = ["use_pem"]}
chrono = "^0.4"
env_logger = "^0.11"
log = "^0.4"
thiserror = "1"
serde_json = "^1"
serde_derive = "^1"
serde = "^1"
rand = "^0.8"
url = "^2.2"
serde-xml-rs = "^0.6"
reqwest = { "version" = "0.12", default_features=false, features = ["rustls-tls"]}
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
# cwmp = { git = "ssh://git@github.com/jdalberg/cwmp.git", tag = "0.2.4"}
cwmp = { path = "../cwmp"}
bytes = "1"

[dependencies.uuid]
version = "^1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
