[workspace]
resolver = "2"
members = [
    "apps/acs-cwmp",
    "apps/acs-usp",
    "libs/nats-common",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
