[package]
name = "acs-controller"
version = "0.1.0"
edition = "2021"
authors = ["Jesper Dalberg"]
license = "Unlicense"
description = "ACS controller — receives device events from protocol pods and manages device state in PostgreSQL"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
clap        = { workspace = true }
async-nats  = { workspace = true }
nats-common = { path = "../../libs/nats-common" }

# Async PostgreSQL with compile-time-optional query checking.
# Run `cargo sqlx prepare` against a live DB to enable offline mode.
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
] }

tokio-stream = "0.1"
thiserror    = "1"
anyhow       = "1"

[dependencies.uuid]
version = "1"
features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics",
]
